--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version:  14
+          node-version:  22
           cache: 'yarn'
 
       - name: Install dependencies
@@ -31,12 +31,12 @@ jobs:
         run: |
           zip -r h5p-standalone-release.zip dist/ README.md
 
-      - name: Release
-        uses: cycjimmy/semantic-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
-        with:
-          extra_plugins: |
-            @semantic-release/changelog
-            @semantic-release/git
+      # - name: Release
+      #   uses: cycjimmy/semantic-release-action@v3
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+      #   with:
+      #     extra_plugins: |
+      #       @semantic-release/changelog
+      #       @semantic-release/git
