--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,12 +31,8 @@ jobs:
         run: |
           zip -r h5p-standalone-release.zip dist/ README.md
 
-      # - name: Release
-      #   uses: cycjimmy/semantic-release-action@v3
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
-      #   with:
-      #     extra_plugins: |
-      #       @semantic-release/changelog
-      #       @semantic-release/git
+      - name: Release
+        uses: actions/upload-artifact@v4
+        with:
+          name: h5p-standalone-release
+          path: h5p-standalone-release.zip
